# temple

./: .gitignore  Cargo.toml  README.md
.github/workflows/: releases.yml
src/: main.rs  server.rs
src/commands/: build.rs  mod.rs  watch.rs
src/template/: errors.rs  mod.rs  page.rs  parsing.rs
