[package]
name = "temple"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
axum = "0.8.6"
chrono = "0.4.39"
clap = { version = "4", features = ["derive"] }
dircpy = "0.3.19"
dirs = "5"
env_logger = "0.11.6"
figment = { version = "0.10", features = ["json", "yaml", "toml", "env"] }
futures-util = "0.3.31"
log = "0.4.25"
mime_guess = "2.0.5"
notify = { version = "8.0.0", features = ["crossbeam-channel"] }
serde = { version = "1", features = ["derive"] }
thiserror = "2.0.11"
tokio = { version = "1.48.0", features = ["full"] }
tokio-stream = { version = "0.1.17", features = ["full"] }
toml = "0.8.19"
tower-http = { version = "0.6.6", features = ["fs"] }
webbrowser = "1.0.6"

[profile.release]
strip = true
opt-level = "s"
codegen-units = 1
lto = true
panic = "unwind"
